Stop trying to make animations work w/ js disabled
It's too much effort for too little gain. What's important is that the website is functional with JS off.

--- a/assets/noscript.css
+++ b/assets/noscript.css
@@ -6,6 +6,6 @@ body {
 	animation: fade-in 0.3s ease-out forwards;
 }
 
-.patient-move-set.move-set-item, .patient-move-set.move-set-item .move-set-subItem {
-	opacity: 1;
+.move-set-item, .move-set-subItem {
+	opacity: 1 !important;
 }
